crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__empty_fstrings.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..2 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 2..3 (flags = DOUBLE_QUOTES | F_STRING),
    String 4..6 (flags = DOUBLE_QUOTES),
    FStringStart 7..9 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 9..10 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 11..13 (flags = F_STRING),
    FStringEnd 13..14 (flags = F_STRING),
    String 15..17,
    FStringStart 18..22 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING),
    FStringEnd 22..25 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING),
    FStringStart 26..30 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    FStringEnd 30..33 (flags = TRIPLE_QUOTED_STRING | F_STRING),
    Newline 33..33,
]
```
