crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__empty_ipython_escape_command.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_jupyter_source(source)
---
## Tokens
```
[
    IpyEscapeCommand 0..1,
    Newline 1..2,
    IpyEscapeCommand 2..4,
    Newline 4..5,
    IpyEscapeCommand 5..6,
    Newline 6..7,
    IpyEscapeCommand 7..9,
    Newline 9..10,
    IpyEscapeCommand 10..11,
    Newline 11..12,
    IpyEscapeCommand 12..14,
    Newline 14..15,
    IpyEscapeCommand 15..16,
    Newline 16..17,
    IpyEscapeCommand 17..18,
    Newline 18..19,
    IpyEscapeCommand 19..20,
    Newline 20..20,
]
```
