crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__empty_tstrings.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 2..3 (flags = DOUBLE_QUOTES | T_STRING),
    String 4..6 (flags = DOUBLE_QUOTES),
    TStringStart 7..9 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 9..10 (flags = DOUBLE_QUOTES | T_STRING),
    TStringStart 11..13 (flags = T_STRING),
    TStringEnd 13..14 (flags = T_STRING),
    String 15..17,
    TStringStart 18..22 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 22..25 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringStart 26..30 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 30..33 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    Newline 33..33,
]
```
