crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__escape_unicode_name.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    String 0..14 (flags = DOUBLE_QUOTES),
    Newline 14..14,
]
```
