crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__fstring.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..2 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 2..9 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 9..10,
    Identifier 10..13,
    Rbrace 13..14,
    FStringMiddle 14..27 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 27..28,
    Identifier 28..31,
    Rbrace 31..32,
    FStringMiddle 32..35 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 35..36,
    Identifier 36..41,
    Rbrace 41..42,
    FStringMiddle 42..44 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 44..45 (flags = DOUBLE_QUOTES | F_STRING),
    Newline 45..45,
]
```
