crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__fstring_comments.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    FStringStart 0..4 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING),
    FStringMiddle 4..21 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING),
    Lbrace 21..22,
    Comment 23..34,
    NonLogicalNewline 34..35,
    Identifier 39..40,
    NonLogicalNewline 40..41,
    Rbrace 41..42,
    FStringMiddle 42..59 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING),
    FStringEnd 59..62 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING),
    Newline 62..62,
]
```
